--- a/EasyToChat/EasyToChat/OneImgTableViewCell.xib
+++ b/EasyToChat/EasyToChat/OneImgTableViewCell.xib
@@ -7,30 +7,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="OneImgTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="431" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="155" id="KGk-i7-Jjw" customClass="OneImgTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="431" height="155"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="431" height="119"/>
+                <rect key="frame" x="0.0" y="0.0" width="431" height="154"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zUP-fk-Inp">
-                        <rect key="frame" x="8" y="6" width="122" height="105"/>
+                        <rect key="frame" x="8" y="6" width="126" height="135"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="InE-i4-R3s">
                         <rect key="frame" x="142" y="8" width="173" height="21"/>
-                        <color key="backgroundColor" red="0.42333931181193918" green="1" blue="0.79719650039230383" alpha="1" colorSpace="calibratedRGB"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tFR-QZ-x5y">
-                        <rect key="frame" x="343" y="84" width="51" height="22"/>
-                        <color key="backgroundColor" red="0.2306206626" green="0.77141913539999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="329" y="84" width="75" height="22"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BE5-2K-PYT">
-                        <rect key="frame" x="142" y="33" width="173" height="73"/>
-                        <color key="backgroundColor" red="0.23062066257170377" green="0.77141913541178564" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="142" y="33" width="173" height="108"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -43,7 +40,7 @@
                 <outlet property="oneButton" destination="tFR-QZ-x5y" id="68i-CZ-6BU"/>
                 <outlet property="oneLabel" destination="InE-i4-R3s" id="gNu-bw-0rI"/>
             </connections>
-            <point key="canvasLocation" x="424.5" y="444"/>
+            <point key="canvasLocation" x="424.5" y="461.5"/>
         </tableViewCell>
     </objects>
 </document>
